cambios de commit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Mi primera página</title>
 </head>
 <body>
-    
+    <form action="">
+        <p>Nombre</p>
+        <input type="text" value="">
+        <p>Apellido</p>
+        <input type="text" value="">
+    </form>
 </body>
 </html>
