--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <input type="text" value="">
         <p>Apellido</p>
         <input type="text" value="">
+        <p>Dirección</p>
+        <input type="text" value="">
     </form>
 </body>
 </html>
