--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <input type="text" value="">
         <p>Dirección</p>
         <input type="text" value="">
+        <p>Edad</p>
+        <input type="text" value="">
     </form>
 </body>
 </html>
